--- a/events.html
+++ b/events.html
@@ -49,39 +49,39 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Venues
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Bristol</a>
-                            <a class="dropdown-item" href="#">Taunton</a>
-                            <a class="dropdown-item" href="#">Exeter</a>
-                            <a class="dropdown-item" href="#">Weston-Super-Mare</a>
+                            <a class="dropdown-item" href="venuesB.html">Bristol</a>
+                            <a class="dropdown-item" href="venuesT.html">Taunton</a>
+                            <a class="dropdown-item" href="venuesE.html">Exeter</a>
+                            <a class="dropdown-item" href="venuesW.html">Weston-Super-Mare</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Live Sports</a>
+                        <a class="nav-link" href="livesports.html">Live Sports</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Food</a>
+                        <a class="nav-link" href="food.html">Food</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Discounts</a>
+                        <a class="nav-link" href="discount.html">Discounts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQs</a>
+                        <a class="nav-link" href="faq.html">FAQs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parties</a>
+                        <a class="nav-link" href="parties.html">Parties</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.php">Contact</a>
                     </li>
 
                 </ul>
@@ -116,63 +116,63 @@
             <div class="container-fluid">
                 <div class="events-locations">
 
-                    <div class="location-one">
+                    <div class="location-one locations">
                         <h3>Taunton</h3>
                         <div class="row">
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Pool</strong></p>
+                                <h4><strong>Pool</strong></h4>
                                 <p>Allstars Sports Bar Taunton sponsors the Somerset County Pool Association.
                                     It is the home venue to Somerset County.
-                                    Multiple competitions held all year round for Men, Ladies, Seniors & Juniors</p>
+                                    Multiple competitions held all year round for Men, Ladies, Seniors and Juniors</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Snooker</strong></p>
+                                <h4><strong>Snooker</strong></h4>
                                 <p>Allstars Taunton provides 3 top class full size snooker tables for hire.</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Darts</strong></p>
+                                <h4><strong>Darts</strong></h4>
                                 <p>Allstars has 4 Dart boards with electronic scoreboards</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Quizzes & other events</strong></p>
+                                <h4><strong>Quizzes & other events</strong></h4>
                                 <p>Allstars holds regular quiz nights ask a staff member for more information.<p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="location-two">
+                    <div class="location-two locations">
                         <h3>Bristol</h3>
                         <div class="row">
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Pool</strong></p>
+                                <h4><strong>Pool</strong></h4>
                                 <p>Allstars 9 and 8 Ball Money League</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Snooker</strong></p>
+                                <h4><strong>Snooker</strong></h4>
                                 <p>Allstars Bristol have 3 full size snooker tables and are looking for players to join the Bristol and
                                     District Billiards and Snooker League</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Darts</strong></p>
+                                <h4><strong>Darts</strong></h4>
                                 <p>Allstars are always looking for more darts players to play in the local Darts League</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Quizzes and other events</strong></p>
+                                <h4><strong>Quizzes and other events</strong></h4>
                                 <p>Allstars holds regular quiz nights ask a staff member for more information.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="location-three">
+                    <div class="location-three locations">
                         <h3>Weston</h3>
                         <div class="row">
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Pool</strong></p>
+                                <h4><strong>Pool</strong></h4>
                                 <p>Allstars Sports Bar Weston sponsors the Weston Pool League,
                                     which boasts 7 divisions, over 1000 pool players and is one of the largest leagues in the country.</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Snooker</strong></p>
+                                <h4><strong>Snooker</strong></h4>
                                 <p>If snooker is more your thing then along with the 3 full size snooker tables in Allstars Weston.
                                     Allstars membership includes Frames Snooker Centre, Sunnyside Road North, Weston-super-Mare.
 
@@ -182,35 +182,35 @@
                                     Frames also run a singles league</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Darts</strong></p>
+                                <h4><strong>Darts</strong></h4>
                                 <p>Allstars are always looking for more darts players it has several darts teams in the local Weston Darts League</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Quizzes and other events</strong></p>
+                                <h4><strong>Quizzes and other events</strong></h4>
                                 <p>Allstars holds regular quiz nights ask a staff member for more information.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="location-four">
+                    <div class="location-four locations">
                         <h3>Exeter</h3>
                         <div class="row">
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Pool</strong></p>
+                                <h4><strong>Pool</strong></h4>
                                 <p>Allstars Sports Bar Exeter sponsors the Devon County Pool Association.
                                     It is the home venue to Devon County.
                                     Multiple competitions held all year round for Men, Ladies, Seniors and Junior.</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Snooker</strong></p>
+                                <h4><strong>Snooker</strong></h4>
                                 <p>Allstars Exeter provides 4 top class full size snooker tables for hire in a private area.</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Darts</strong></p>
+                                <h4><strong>Darts</strong></h4>
                                 <p>Allstars has 3 Dart boards with electronic scoreboards</p>
                             </div>
                             <div class="col-sm-12 col-md-3 col-lg-3">
-                                <p><strong>Quizzes and other events</strong></p>
+                                <h4><strong>Quizzes and other events</strong></h4>
                                 <p>Allstars holds regular quiz nights ask a staff member for more information.</p>
                             </div>
                         </div>
@@ -226,6 +226,25 @@
         <div class="venue-bar">
             <h3>Venue bar</h3>
             <button id="venue-button">Click here</button>
+            <div class="venue-dropdown-content">
+
+                    <div class="venue-content-one venue-content">
+                        <a href="venuesT.html"><img src="img/venuesIcon.png"></a>
+                        <p>Taunton</p>
+                    </div>
+                    <div class="venue-content-two venue-content">
+                        <a href="venuesE.html"><img src="img/venuesIcon.png"></a>
+                        <p>Exeter</p>
+                    </div>
+                    <div class="venue-content-three venue-content">
+                        <a href="venuesB.html"><img src="img/venuesIcon.png"></a>
+                        <p>Bristol</p>
+                    </div>
+                    <div class="venue-content-four venue-content">
+                        <a href="venuesW.html"><img src="img/venuesIcon.png"></a>
+                        <p>Weston</p>
+                    </div>
+                </div>
         </div>
     </div>
 
@@ -235,13 +254,29 @@
             <h3>Social bar</h3>
             <button id="social-button">Click here</button>
 
-            <div class="social-facebook-icons" id="facebook-one"></div>
-            <div class="social-facebook-icons" id="facebook-two"></div>
-            <div class="social-facebook-icons" id="facebook-three"></div>
-            <div class="social-facebook-icons" id="facebook-four"></div>
+            <div class="social-dropdown-content">
+                <div class="row">
+                    <div class="social-content-one social-content">
+                        <a href="https://www.facebook.com/allstarstaunton/?fref=ts" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Taunton</p>
+                    </div>
+                    <div class="social-content-two social-content">
+                        <a href="https://www.facebook.com/allstarssportsbarexeter/?ref=br_rs" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Exeter</p>
+                    </div>
+                    <div class="social-content-three social-content">
+                        <a href="https://www.facebook.com/allstarsbristol/?fref=ts" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Bristol</p>
+                    </div>
+                    <div class="social-content-four social-content">
+                        <a href="https://www.facebook.com/allstarssportsbars/?ref=br_rs" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Weston</p>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
-
 
     <footer>
         <div class="container-fluid">
@@ -249,22 +284,22 @@
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-left">
 
-                        <p>contact address</p>
-                        <p>contact postcode</p>
+                        <p>Allstars Sports Bars</p>
+                        <p>Copyright 2019</p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-middle">
-                        <p>FAQ's</p>
-                        <p>PRIVACY POLICY</p>
+                        <p><a href="faq.html" target="_blank" style="color: #FFF">FAQ's</a></p>
+                        <p><a href="privacy.html" target="_blank" style="color: #FFF">PRIVACY POLICY</a></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-right">
-                        <p>contact number</p>
-                        <p>contact email@@@@@@@</p>
-                        <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
-                        <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                        <p>Weston-super-Mare 01934 419 111 | Taunton 01823 334 880 | Bristol 01179 294 295 | Exeter 01392 438 853</p>
+                        <p>weston@allstarssportsbars.co.uk, taunton@allstarssportsbars.co.uk, bristol@allstarssportsbars.co.uk, exeter@allstarssportsbars.co.uk</p>
+                        <a href="https://www.facebook.com/groups/1734623133420097/" target="_blank"><img src="img/facebook.png" class="facebook-icon" alt="Facebook"></a>
+                        <a href="https://www.linkedin.com/company/allstars-sports-bars" target="_blank"><img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn"></a>
                     </div>
                 </div>
             </div>
