--- a/venuesE.html
+++ b/venuesE.html
@@ -58,7 +58,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="venuesB.html">Bristol</a>
                             <a class="dropdown-item" href="venuesT.html">Taunton</a>
-                            <a class="dropdown-item" href="venuesE.html">Exeter</a>
+                            <a class="dropdown-item" href="#">Exeter</a>
                             <a class="dropdown-item" href="venuesW.html">Weston-Super-Mare</a>
                         </div>
                     </li>
@@ -78,7 +78,7 @@
                         <a class="nav-link" href="faq.html">FAQs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parties</a>
+                        <a class="nav-link" href="parties.html">Parties</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.php">Contact</a>
@@ -91,82 +91,94 @@
     </header>
 
 
-    <div class="parties-page jumbotron jumbotron-fluid">
+    <div class="venue-page jumbotron jumbotron-fluid">
         <div class="container">
-            <h1>Parties</h1>
-            <p>All Stars Sports Bar parties</p>
+            <h1>All Stars Exeter</h1>
+            <p>Welcome to Allstars Exeter</p>
         </div>
     </div>
 
 
     <div class="container">
         <div class="main-content-area">
-            <h2>Parties and Functions</h2>
-            <P>Look at what each venue can provide!</P>
+            <h2>Where to find us</h2>
+            <P>Situated close to John Lewis and above Iceland in Sidwell Street, Exeter.</P>
         </div>
     </div>
 
-
-    <div class="container-fluid">
-        <div class="party-section-one party-sections">
-            <h3>Party at All Stars Weston-Super-Mare</h3>
-            <p>Although Allstars in Weston-super-Mare doesn't have a function room we can still offer great deals for groups and functions please contact us.</p>
-        </div>
-    </div>
+    <div class="container">
+        <div class="venues-section">
 
 
-    <div class="container-fluid">
-        <div class="party-section-two party-sections">
-            <h3>Party at All Stars Taunton</h3>
-            <p>Allstars in Taunton have two function rooms available for hire, please contact us using our enquiry form</p>
-            <p>Room contains 3 pool tables, darts, big screen and 5x 42inch HD TV’s</p>
-        </div>
-    </div>
+            <div class="venue-loction-four venue-loctions">
+                <h3>Location on Google maps</h3>
+                <p>We're open from 10am everday so you can drop by any time. We have fantastic facilities and serve hot and cold food at great prices.
+                    Families are more than welcome!</p>
+                <iframe width="600" height="450" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJMTTiPj6kbUgRPcdYpR68tJI&key=AIzaSyApbntvsvfTp-vrJeZ0-DJhbXXbAb9XlYo" allowfullscreen></iframe>
+                <br>
+                <p>19-23 Sidwell Street
+                    Exeter EX4 6NN Tel: 01392 438 853</p>
+                <p>Monday 10:00 - Late</p>
+                <p>Tuedsay 10:00 - Late</p>
+                <p>Wednesday 10:00 - Late</p>
+                <p>Thursday 10:00 - Late</p>
+                <p>Friday 10:00 - Late</p>
+                <p>Saturday 10:00 - Late</p>
+                <p>Sunday 10:00 - Late</p><br>
 
+                <p>Live Sport And Entertainment:
+                    Here at Allstars, Exeter we have the facilities to show up to 7 events at any given time in HD. We have 4 large projected HD screens and over 40 large screen wall-mounted LCD TV's that you can request your choice of broadcast.
 
-    <div class="container-fluid">
-        <div class="party-section-three party-sections">
-            <h3>Party at All Stars Bristol</h3>
-            <p>Although Allstars in Bristol doesn't have a function room it can still offer great deals for groups and functions, please contact us
-                using our enquiry form</p>
-        </div>
-    </div>
+                    We also have BT Sport HD and Sky Sports HD across all of our large HD TV's and HD projected screens. To supplement those we also have access to many European channels, showing games from across the continent and the world as well as home matches. Some of these show games and sports that you just won't find on a normal home Satellite box.
 
+                    • Over 40 wall mounted HD TV's
+                    • 4 large HD projection screens
+                    • Sky Sports HD
+                    • BT Sports HD
+                    • Eurosport HD</p>
+                <p>Choose Your Channel
+                    Don't think you have to watch what everyone else is watching. If you're playing at any of our 25 tables you can request the channel of your choice on your nearest set. Want to watch live Formula One? No problem. Football? You tell us which match and we'll hook your set up.</p>
+                <p>Pool, Snooker and More
+                    Allstars Exeter sports:
+                    • 4 full size Snooker tables (in private area)
+                    • 4 Sam K Steel American Pool tables
+                    • 16 Supreme Winner English Pool tables
+                    • Every table uses state of the art 450watt Luminaire low profile lights for unrivalled lighting quality
+                    •1 Joy Chinese 8ball table
+                    • Poker Machine
+                    • Boxing Machine
+                    • 12 Dart Boards with electronic scoreboards
+                    • Table Football
+                    • Private Function Room
+                    Day visitors can still take advantage of our competitive table rates:
+                    Tables available at an hourly rate
+                    or
+                    If you just want a few quick frames of english pool then one of our two coin-operated English Pool tables may be just what you need.
 
-    <div class="container-fluid">
-        <div class="party-section-four party-sections">
-            <h3>Party at All Stars Exeter</h3>
-            <p>Allstars in Exeter have a function room available for hire please contact us using our enquiry form</p>
+                    just make sure you don't pot the 8 ball on the break!
+                    Food available all day
+                    Allstars Sports Bars offer a full menu all day.</p>
+                <p>Smoking Area: Allstars Exeter offers a comfortable area for those who fancy a cigarette.</p>
+                <p>Cues and Accessories: Allstars Exeter has a great range of cues and accessories available.
+
+                    If you're looking for a new cue, where better as you can try before you buy?
+
+                    Just ask a member of the Allstars team for assistance.</p>
+                <p>Amusements:Every Allstars venue has amusements to keep you entertained.
+
+                    Including Bar Football, Boxing Machines, Fruit Machines and Amusement only Machines.
+
+                    For our regulars, Cue Lockers are available for hire.
+                    *TV's are grouped and we may not be able to give you the screen of your choice, but the closest one we can!
+
+                    **Due to our local licensing, Under 16's must be accompanied by an adult and are required to leave by 9pm, No Under 18's after 11pm.</p>
+            </div>
         </div>
     </div>
 
 
     <!--social and venue banner -->
-    <div class="container-fluid">
-        <div class="venue-bar">
-            <h3>Venue bar</h3>
-            <button id="venue-button">Click here</button>
-            <div class="venue-dropdown-content">
-
-                    <div class="venue-content-one venue-content">
-                        <a href="venuesT.html"><img src="img/venuesIcon.png"></a>
-                        <p>Taunton</p>
-                    </div>
-                    <div class="venue-content-two venue-content">
-                        <a href="venuesE.html"><img src="img/venuesIcon.png"></a>
-                        <p>Exeter</p>
-                    </div>
-                    <div class="venue-content-three venue-content">
-                        <a href="venuesB.html"><img src="img/venuesIcon.png"></a>
-                        <p>Bristol</p>
-                    </div>
-                    <div class="venue-content-four venue-content">
-                        <a href="venuesW.html"><img src="img/venuesIcon.png"></a>
-                        <p>Weston</p>
-                    </div>
-                </div>
-        </div>
-    </div>
+   
 
 
     <div class="container-fluid">
@@ -194,7 +206,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </div>
 
