--- a/discount.html
+++ b/discount.html
@@ -50,39 +50,39 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Venues
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Bristol</a>
-                            <a class="dropdown-item" href="#">Taunton</a>
-                            <a class="dropdown-item" href="#">Exeter</a>
-                            <a class="dropdown-item" href="#">Weston-Super-Mare</a>
+                            <a class="dropdown-item" href="venuesB.html">Bristol</a>
+                            <a class="dropdown-item" href="venuesT.html">Taunton</a>
+                            <a class="dropdown-item" href="venuesE.html">Exeter</a>
+                            <a class="dropdown-item" href="venuesW.html">Weston-Super-Mare</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Live Sports</a>
+                        <a class="nav-link" href="livesports.html">Live Sports</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Events</a>
+                        <a class="nav-link" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Food</a>
+                        <a class="nav-link" href="food.html">Food</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Discounts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQs</a>
+                        <a class="nav-link" href="faq.html">FAQs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parties</a>
+                        <a class="nav-link" href="parties.html">Parties</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.php">Contact</a>
                     </li>
 
                 </ul>
@@ -94,16 +94,16 @@
 
     <div class="discount-page jumbotron jumbotron-fluid">
         <div class="container">
-            <h1>Fluid jumbotron</h1>
-            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            <h1>Discounts</h1>
+            <p>All Stars Sports Bar venues discounts</p>
         </div>
     </div>
 
 
     <div class="container">
         <div class="main-content-area">
-            <h2>content area</h2>
-            <P>exampletext</P>
+            <h2>Check below to see the discounts nearest you.</h2>
+            <P>Allstars Sports Bars discount cards can be used at any Allstars Venue.</P>
         </div>
     </div>
 
@@ -113,27 +113,171 @@
 
 
             <div class="discount-one discount-items">
-                <h3>titles of the item</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-                <img src="img/discounts-test.jpg">
+                <h3>All Stars Discount Card Weston-Super-Mare</h3>
+                <p>If you're an Allstars Sports Bar regular why not take up our Annual Discount Card offer and receive all these great card-holder only offers.</p>
+                <p>Monday Special: 50% off table hire all day and night</p>
+                <img src="img/discount/discounts_weston_mon.jpg">
             </div>
 
             <hr>
 
             <div class="discount-two discount-items">
-                <h3>titles of the item</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-                <img src="img/discounts-test.jpg">
+                <h3>Annual Discount Card Benefits</h3>
+                <p>• Free entry
+                    • 10% credit back in your app bank on selected food and drink
+                    • 25% off selected table play (using the Allstars loyalty card and app)
+
+                    Sunday's
+                    • 50% off table hire after 6pm
+
+                    Monday's
+                    • 50% off table hire
+
+                    Thursday's
+                    • 50% off tables at till - 15% off selected food and drink plus 10% credit to your app bank</p>
+                <img src="img/discount/discounts_weston_mon1.jpg">
             </div>
 
             <hr>
 
             <div class="discount-two discount-items">
-                <h3>titles of the item</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-                <img src="img/discounts-test.jpg">
+                <h3>Great Value</h3>
+                <p>Our Annual Discount Card offers the best value table play, giving 25% off our day rates. The offer is the same whether you choose our English, American, Chinese or Snooker tables and we operate traditional pay-by-the-hour club tables meaning you pay per table, not per person. These can be reserved by Annual Discount Card holders for as long as you wish.</p>
+                <p>Please contact Allstars Weston to find out our current hourly rates and charges for Annual Discount Card</p>
+                <img src="img/discount/discounts_weston2.jpg">
             </div>
 
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>All Stars Discount Card Taunton</h3>
+                <p>If you're an Allstars Sports Bar regular why not take up our Annual Discount Card offer and receive all these great card-holder only offers.</p>
+                <p>Tuesday Special: 50% off table hire all day and night</p>
+                <img src="img/discount/discounts_not_weston_tues3.jpg">
+            </div>
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>Annual Discount Card Benefits</h3>
+                <p>• Free entry
+                    • 10% credit back in your app bank on selected food and drink
+                    • 25% off selected table play (using the Allstars loyalty card and app)
+
+                    Sunday's
+                    • 50% off table hire after 6pm
+
+                    Tuesday's
+                    • 50% off table hire
+
+                    Thursday's
+                    • 50% off tables at till - 15% off selected food and drink plus 10% credit to your app bank</p>
+                <img src="img/discount/discounts_not_bristol_nfl4.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>NFL Sundays</h3>
+                <p>2x Botles of Bud £6</p>
+                <img src="img/discount/discounts_not_bristol_nfl4.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>Value to Play</h3>
+                <p>Our Annual Discount Card offer the best value play times around, giving a 25% off our day rates. The price is the same whether you choose our English, American or Snooker tables and we operate traditional pay-by-the-hour club tables meaning you pay per table, not per person. These can be reserved by Annual Discount Card holders for as long as you wish.</p>
+                <img src="img/discount/taunton_pool4.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>Taunton Discounts</h3>
+                <p>Please contact Allstars Taunton to find out current hourly rates and charges for Annual Discount Card</p>
+                <img src="img/discount/discounts_taunton5.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>All Stars Discount Card Bristol</h3>
+                <p>If you're an Allstars Sports Bar regular why not take up our Annual Discount Card offer and receive all these great card-holder only offers.</p>
+                <p>Tuesday Special: 50% off table hire all day and night</p>
+                <img src="img/discount/discounts_not_weston_tues9.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>Annual Discount Card Benefits</h3>
+                <p>• Free entry
+                    • 10% credit back in your app bank on selected food and drink
+                    • 25% off selected table play (using the Allstars loyalty card and app)
+
+                    Sunday's
+                    • 50% off table hire after 6pm
+
+                    Tuesday's
+                    • 50% off table hire
+
+                    Thursday's
+                    • 50% off tables at till - 15% off selected food and drink plus 10% credit to your app bank</p>
+                <img src="img/discount/discounts_not_bristol_nfl4.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>Discount Card Offer</h3>
+                <p>Our Annual Discount Card offer the best value play times around, giving a 25% off our day rates. The price is the same whether you choose our English, American or Snooker tables and we operate traditional pay-by-the-hour club tables meaning you pay per table, not per person. These can be reserved by Annual Discount Card holders for as long as you wish.</p>
+                <p>Please contact Allstars Bristol to find out current hourly rates and charges for Annual Discount Card.</p>
+                <img src="img/discount/discounts_bristol11.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>All Stars Discount Card Bristol</h3>
+                <p>If you're an Allstars Sports Bar regular why not take up our Annual Discount Card offer and receive all these great card-holder only offers.</p>
+                <p>Tuesday Special: 50% off table hire all day and night</p>
+                <img src="img/discount/discounts_not_weston_tues3.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>Annual Discount Card Benefits</h3>
+                <p>• Free entry
+                    • 10% credit back in your app bank on selected food and drink
+                    • 25% off selected table play (using the Allstars loyalty card and app)
+
+                    Sunday's
+                    • 50% off table hire after 6pm
+
+                    Tuesday's
+                    • 50% off table hire
+
+                    Thursday's
+                    • 50% off tables at till - 15% off selected food and drink plus 10% credit to your app bank</p>
+                <img src="img/discount/discounts_not_bristol_nfl4.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>Discount Card Offer</h3>
+                <p>Our Annual Discount Card offer the best value play times around, giving a 25% off our day rates. The price is the same whether you choose our English, American or Snooker tables and we operate traditional pay-by-the-hour club tables meaning you pay per table, not per person. These can be reserved by Annual Discount Card holders for as long as you wish.</p>
+                <img src="img/discount/exeter_pool10.jpg">
+            </div>
+
+            <hr>
+
+            <div class="discount-two discount-items">
+                <h3>Exeter Discounts</h3>
+                <p>Please contact Allstars Exeter to find out current hourly rates and charges for Annual Discount Card</p>
+                <img src="img/discount/discounts_exeter8.jpg">
+            </div>
 
         </div>
     </div>
@@ -144,6 +288,25 @@
         <div class="venue-bar">
             <h3>Venue bar</h3>
             <button id="venue-button">Click here</button>
+            <div class="venue-dropdown-content">
+
+                <div class="venue-content-one venue-content">
+                    <a href="venuesT.html"><img src="img/venuesIcon.png"></a>
+                    <p>Taunton</p>
+                </div>
+                <div class="venue-content-two venue-content">
+                    <a href="venuesE.html"><img src="img/venuesIcon.png"></a>
+                    <p>Exeter</p>
+                </div>
+                <div class="venue-content-three venue-content">
+                    <a href="venuesB.html"><img src="img/venuesIcon.png"></a>
+                    <p>Bristol</p>
+                </div>
+                <div class="venue-content-four venue-content">
+                    <a href="venuesW.html"><img src="img/venuesIcon.png"></a>
+                    <p>Weston</p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -153,10 +316,27 @@
             <h3>Social bar</h3>
             <button id="social-button">Click here</button>
 
-            <div class="social-facebook-icons" id="facebook-one"></div>
-            <div class="social-facebook-icons" id="facebook-two"></div>
-            <div class="social-facebook-icons" id="facebook-three"></div>
-            <div class="social-facebook-icons" id="facebook-four"></div>
+            <div class="social-dropdown-content">
+                <div class="row">
+                    <div class="social-content-one social-content">
+                        <a href="https://www.facebook.com/allstarstaunton/?fref=ts" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Taunton</p>
+                    </div>
+                    <div class="social-content-two social-content">
+                        <a href="https://www.facebook.com/allstarssportsbarexeter/?ref=br_rs" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Exeter</p>
+                    </div>
+                    <div class="social-content-three social-content">
+                        <a href="https://www.facebook.com/allstarsbristol/?fref=ts" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Bristol</p>
+                    </div>
+                    <div class="social-content-four social-content">
+                        <a href="https://www.facebook.com/allstarssportsbars/?ref=br_rs" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Weston</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
@@ -167,22 +347,22 @@
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-left">
 
-                        <p>contact address</p>
-                        <p>contact postcode</p>
+                        <p>Allstars Sports Bars</p>
+                        <p>Copyright 2019</p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-middle">
-                        <p>FAQ's</p>
-                        <p>PRIVACY POLICY</p>
+                        <p><a href="faq.html" target="_blank" style="color: #FFF">FAQ's</a></p>
+                        <p><a href="privacy.html" target="_blank" style="color: #FFF">PRIVACY POLICY</a></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-right">
-                        <p>contact number</p>
-                        <p>contact email@@@@@@@</p>
-                        <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
-                        <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                        <p>Weston-super-Mare 01934 419 111 | Taunton 01823 334 880 | Bristol 01179 294 295 | Exeter 01392 438 853</p>
+                        <p>weston@allstarssportsbars.co.uk, taunton@allstarssportsbars.co.uk, bristol@allstarssportsbars.co.uk, exeter@allstarssportsbars.co.uk</p>
+                        <a href="https://www.facebook.com/groups/1734623133420097/" target="_blank"><img src="img/facebook.png" class="facebook-icon" alt="Facebook"></a>
+                        <a href="https://www.linkedin.com/company/allstars-sports-bars" target="_blank"><img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn"></a>
                     </div>
                 </div>
             </div>
