--- a/index.html
+++ b/index.html
@@ -56,32 +56,32 @@
                             Venues
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Bristol</a>
-                            <a class="dropdown-item" href="#">Taunton</a>
-                            <a class="dropdown-item" href="#">Exeter</a>
-                            <a class="dropdown-item" href="#">Weston-Super-Mare</a>
+                            <a class="dropdown-item" href="venuesB.html">Bristol</a>
+                            <a class="dropdown-item" href="venuesT.html">Taunton</a>
+                            <a class="dropdown-item" href="venuesE.html">Exeter</a>
+                            <a class="dropdown-item" href="venuesW.html">Weston-Super-Mare</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Live Sports</a>
+                        <a class="nav-link" href="livesports.html">Live Sports</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Events</a>
+                        <a class="nav-link" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Food</a>
+                        <a class="nav-link" href="food.html">Food</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Discounts</a>
+                        <a class="nav-link" href="discount.html">Discounts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQs</a>
+                        <a class="nav-link" href="faq.html">FAQs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parties</a>
+                        <a class="nav-link" href="parties.html">Parties</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.php">Contact</a>
                     </li>
 
                 </ul>
@@ -122,15 +122,6 @@
                 Please note: Due to COVID-19 - Allstars venues will be closed until further notice
                 sorry for any inconvenience caused, keep safe everyone.</P>
         </div>
-             <div class="main-content-area" id="announcement">
-            <h2>Announcement and News</h2>
-            <P>AllStars Bristol are extremely proud to announce that the table used in the 2018 Mosconi Cip now lives with us. This is a Rasson Billiards Victory table covered in Andy 988 cloth. A very special table in a very special place!!
-                everyone is welcome to try it out. <br>
-                Chinese 8-Ball is a cue sport in it’s infancy, but one that has began to catch the global audience’s attention. This table is the same size as an American pool table (9ft x 5ft) but cut with snooker pockets and a napped cloth. America pool balls are used to play the game, which clearly makes the game VERY difficult. Many of the world’s top snooker players have competed in Chinese 8-Ball events worldwide and the verdict has been extremely positive about this new game. <br>
-                Stephen Hendry: “Chinese 8-Ball is on the way to going out to the world. I’m happy to be apart of the process.”<br>
-            </P>
-        </div>
-    </div>
 
 
     <!--- Trio of boxes --->
@@ -157,11 +148,43 @@
     </div>
 
 
+      <div class="main-content-area" id="announcement">
+            <h2>Announcement and News</h2>
+            <P>AllStars Bristol are extremely proud to announce that the table used in the 2018 Mosconi Cip now lives with us. This is a Rasson Billiards Victory table covered in Andy 988 cloth. A very special table in a very special place!!
+                everyone is welcome to try it out. <br>
+                Chinese 8-Ball is a cue sport in it’s infancy, but one that has began to catch the global audience’s attention. This table is the same size as an American pool table (9ft x 5ft) but cut with snooker pockets and a napped cloth. America pool balls are used to play the game, which clearly makes the game VERY difficult. Many of the world’s top snooker players have competed in Chinese 8-Ball events worldwide and the verdict has been extremely positive about this new game. <br>
+                Stephen Hendry: “Chinese 8-Ball is on the way to going out to the world. I’m happy to be apart of the process.”<br>
+            </P>
+        </div>
+    </div>
+
+
+
+
     <!--social and venue banner -->
     <div class="container-fluid">
         <div class="venue-bar">
             <h3>Venue bar</h3>
             <button id="venue-button">Click here</button>
+            <div class="venue-dropdown-content">
+
+                    <div class="venue-content-one venue-content">
+                        <a href="venuesT.html"><img src="img/venuesIcon.png"></a>
+                        <p>Taunton</p>
+                    </div>
+                    <div class="venue-content-two venue-content">
+                        <a href="venuesE.html"><img src="img/venuesIcon.png"></a>
+                        <p>Exeter</p>
+                    </div>
+                    <div class="venue-content-three venue-content">
+                        <a href="venuesB.html"><img src="img/venuesIcon.png"></a>
+                        <p>Bristol</p>
+                    </div>
+                    <div class="venue-content-four venue-content">
+                        <a href="venuesW.html"><img src="img/venuesIcon.png"></a>
+                        <p>Weston</p>
+                    </div>
+                </div>
         </div>
     </div>
 
@@ -171,10 +194,27 @@
             <h3>Social bar</h3>
             <button id="social-button">Click here</button>
 
-            <div class="social-facebook-icons" id="facebook-one"></div>
-            <div class="social-facebook-icons" id="facebook-two"></div>
-            <div class="social-facebook-icons" id="facebook-three"></div>
-            <div class="social-facebook-icons" id="facebook-four"></div>
+            <div class="social-dropdown-content">
+                <div class="row">
+                    <div class="social-content-one social-content">
+                        <a href="https://www.facebook.com/allstarstaunton/?fref=ts" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Taunton</p>
+                    </div>
+                    <div class="social-content-two social-content">
+                        <a href="https://www.facebook.com/allstarssportsbarexeter/?ref=br_rs" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Exeter</p>
+                    </div>
+                    <div class="social-content-three social-content">
+                        <a href="https://www.facebook.com/allstarsbristol/?fref=ts" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Bristol</p>
+                    </div>
+                    <div class="social-content-four social-content">
+                        <a href="https://www.facebook.com/allstarssportsbars/?ref=br_rs" target="_blank"><img src="img/facebook.png"></a>
+                        <p>Weston</p>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 
@@ -185,23 +225,23 @@
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-left">
 
-                        <p>contact address</p>
-                        <p>contact postcode</p>
+                        <p>Allstars Sports Bars</p>
+                        <p>Copyright 2019</p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-middle">
-                        <p>FAQ's</p>
-                        <p>PRIVACY POLICY</p>
+                        <p><a href="faq.html" target="_blank" style="color: #FFF">FAQ's</a></p>
+                        <p><a href="privacy.html" target="_blank" style="color: #FFF">PRIVACY POLICY</a></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-right">
-                        <p>contact number</p>
-                        <p>contact email@@@@@@@</p>
+                        <p>Weston-super-Mare 01934 419 111 | Taunton 01823 334 880 | Bristol 01179 294 295 | Exeter 01392 438 853</p>
+                        <p>weston@allstarssportsbars.co.uk,                                 taunton@allstarssportsbars.co.uk,                                 bristol@allstarssportsbars.co.uk,                                 exeter@allstarssportsbars.co.uk</p>
 
-                        <img src="img/facebook.png" class="facebook-icon" alt="Facebook">
-                        <img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn">
+                        <a href="https://www.facebook.com/groups/1734623133420097/" target="_blank"><img src="img/facebook.png" class="facebook-icon" alt="Facebook"></a>
+                        <a href="https://www.linkedin.com/company/allstars-sports-bars" target="_blank"><img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn"></a>
                     </div>
                 </div>
             </div>
