--- a/index.html
+++ b/index.html
@@ -124,31 +124,37 @@
         </div>
 
 
-    <!--- Trio of boxes --->
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                <div class="discount-card">
-                    <h3>Discount card</h3>
+        <!--- Trio of boxes --->
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                    <a href="discount.html">
+                        <div class="discount-card">
+                            <h3>Discount card</h3>
+                        </div>
+                    </a>
                 </div>
-            </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                <div class="parties">
-                    <h3>Parties</h3>
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                    <a href="parties.html">
+                        <div class="parties">
+                            <h3>Parties</h3>
+                        </div>
+                    </a>
                 </div>
-            </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                <div class="food">
-                    <h3>Food</h3>
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                    <a href="food.html">
+                        <div class="food">
+                            <h3>Food</h3>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
-    </div>
 
 
-      <div class="main-content-area" id="announcement">
+        <div class="main-content-area" id="announcement">
             <h2>Announcement and News</h2>
             <P>AllStars Bristol are extremely proud to announce that the table used in the 2018 Mosconi Cip now lives with us. This is a Rasson Billiards Victory table covered in Andy 988 cloth. A very special table in a very special place!!
                 everyone is welcome to try it out. <br>
@@ -168,23 +174,23 @@
             <button id="venue-button">Click here</button>
             <div class="venue-dropdown-content">
 
-                    <div class="venue-content-one venue-content">
-                        <a href="venuesT.html"><img src="img/venuesIcon.png"></a>
-                        <p>Taunton</p>
-                    </div>
-                    <div class="venue-content-two venue-content">
-                        <a href="venuesE.html"><img src="img/venuesIcon.png"></a>
-                        <p>Exeter</p>
-                    </div>
-                    <div class="venue-content-three venue-content">
-                        <a href="venuesB.html"><img src="img/venuesIcon.png"></a>
-                        <p>Bristol</p>
-                    </div>
-                    <div class="venue-content-four venue-content">
-                        <a href="venuesW.html"><img src="img/venuesIcon.png"></a>
-                        <p>Weston</p>
-                    </div>
+                <div class="venue-content-one venue-content">
+                    <a href="venuesT.html"><img src="img/venuesIcon.png"></a>
+                    <p>Taunton</p>
                 </div>
+                <div class="venue-content-two venue-content">
+                    <a href="venuesE.html"><img src="img/venuesIcon.png"></a>
+                    <p>Exeter</p>
+                </div>
+                <div class="venue-content-three venue-content">
+                    <a href="venuesB.html"><img src="img/venuesIcon.png"></a>
+                    <p>Bristol</p>
+                </div>
+                <div class="venue-content-four venue-content">
+                    <a href="venuesW.html"><img src="img/venuesIcon.png"></a>
+                    <p>Weston</p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -214,7 +220,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </div>
 
@@ -238,7 +244,7 @@
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="footer-right">
                         <p>Weston-super-Mare 01934 419 111 | Taunton 01823 334 880 | Bristol 01179 294 295 | Exeter 01392 438 853</p>
-                        <p>weston@allstarssportsbars.co.uk,                                 taunton@allstarssportsbars.co.uk,                                 bristol@allstarssportsbars.co.uk,                                 exeter@allstarssportsbars.co.uk</p>
+                        <p>weston@allstarssportsbars.co.uk, taunton@allstarssportsbars.co.uk, bristol@allstarssportsbars.co.uk, exeter@allstarssportsbars.co.uk</p>
 
                         <a href="https://www.facebook.com/groups/1734623133420097/" target="_blank"><img src="img/facebook.png" class="facebook-icon" alt="Facebook"></a>
                         <a href="https://www.linkedin.com/company/allstars-sports-bars" target="_blank"><img src="img/linkedin.png" class="linkedin-icon" alt="LinkedIn"></a>
